<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Activity.LoginActivity"
    android:background="@color/backgroundColor">
    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="80dp"
        android:text="@string/safe_transfer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:color="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />



    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/login_email"
        app:layout_constraintEnd_toStartOf="@+id/login_email"
        app:layout_constraintTop_toTopOf="@+id/login_email"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_password"
        app:layout_constraintEnd_toStartOf="@+id/login_password"
        app:layout_constraintTop_toTopOf="@+id/login_password"
        app:srcCompat="@drawable/ic_lock" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="28dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_account_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/create_account_button"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:text="@string/create_account_button"
        android:textAlignment="center"
        android:textColor="@color/accentColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_account_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="169dp"
        android:layout_height="76dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/accentColor"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>