...
        android:id="@+id/recycler_view_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="10dp"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toTopOf="@+id/chat_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/message_item" />

...
        android:background="@color/secondBackgroundColor"
        android:ems="10"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_send_message"
...
